// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migration baseline: SKILL.md (skillStyle) > with techStack and sourceUrl 1`] = `
"---
name: my-project-skill
description: Reference codebase for My Project.
---

# My Project Codebase Reference

42 files | 1000 lines | 12345 tokens

## Overview

Use this skill when you need to:
- Understand project structure and file organization
- Find where specific functionality is implemented
- Read source code for any file
- Search for code patterns or keywords

## Files

| File | Contents |
|------|----------|
| \`references/summary.md\` | **Start here** - Purpose, format explanation, and statistics |
| \`references/project-structure.md\` | Directory tree with line counts per file |
| \`references/files.md\` | All file contents (search with \`## File: <path>\`) |
| \`references/tech-stacks.md\` | Languages, frameworks, and dependencies per package (search with \`## Tech Stack: <path>\`) |

## How to Use

### 1. Find file locations

Check \`project-structure.md\` for the directory tree:

\`\`\`
src/
  index.ts (42 lines)
  utils/
    helpers.ts (128 lines)
\`\`\`

### 2. Read file contents

Grep in \`files.md\` for the file path:

\`\`\`
## File: src/utils/helpers.ts
\`\`\`

### 3. Search for code

Grep in \`files.md\` for keywords:

\`\`\`
function calculateTotal
\`\`\`

## Common Use Cases

**Understand a feature:**
1. Search \`project-structure.md\` for related file names
2. Read the main implementation file in \`files.md\`
3. Search for imports/references to trace dependencies

**Debug an error:**
1. Grep the error message or class name in \`files.md\`
2. Check line counts in \`project-structure.md\` to find large files

**Find all usages:**
1. Grep function or variable name in \`files.md\`

## Tips

- Use line counts in \`project-structure.md\` to estimate file complexity
- Search \`## File:\` pattern to jump between files
- Check \`summary.md\` for excluded files, format details, and file statistics
- Check \`tech-stacks.md\` for languages, frameworks, and dependencies (search \`## Tech Stack:\` to list packages)

---

This skill was generated by [Repomix](https://github.com/yamadashy/repomix) from [My Project](https://github.com/example/my-project)
"
`;

exports[`migration baseline: SKILL.md (skillStyle) > with techStack but no sourceUrl 1`] = `
"---
name: local-skill
description: Local-only skill.
---

# Local Codebase Reference

10 files | 200 lines | 2000 tokens

## Overview

Use this skill when you need to:
- Understand project structure and file organization
- Find where specific functionality is implemented
- Read source code for any file
- Search for code patterns or keywords

## Files

| File | Contents |
|------|----------|
| \`references/summary.md\` | **Start here** - Purpose, format explanation, and statistics |
| \`references/project-structure.md\` | Directory tree with line counts per file |
| \`references/files.md\` | All file contents (search with \`## File: <path>\`) |
| \`references/tech-stacks.md\` | Languages, frameworks, and dependencies per package (search with \`## Tech Stack: <path>\`) |

## How to Use

### 1. Find file locations

Check \`project-structure.md\` for the directory tree:

\`\`\`
src/
  index.ts (42 lines)
  utils/
    helpers.ts (128 lines)
\`\`\`

### 2. Read file contents

Grep in \`files.md\` for the file path:

\`\`\`
## File: src/utils/helpers.ts
\`\`\`

### 3. Search for code

Grep in \`files.md\` for keywords:

\`\`\`
function calculateTotal
\`\`\`

## Common Use Cases

**Understand a feature:**
1. Search \`project-structure.md\` for related file names
2. Read the main implementation file in \`files.md\`
3. Search for imports/references to trace dependencies

**Debug an error:**
1. Grep the error message or class name in \`files.md\`
2. Check line counts in \`project-structure.md\` to find large files

**Find all usages:**
1. Grep function or variable name in \`files.md\`

## Tips

- Use line counts in \`project-structure.md\` to estimate file complexity
- Search \`## File:\` pattern to jump between files
- Check \`summary.md\` for excluded files, format details, and file statistics
- Check \`tech-stacks.md\` for languages, frameworks, and dependencies (search \`## Tech Stack:\` to list packages)

---

This skill was generated by [Repomix](https://github.com/yamadashy/repomix)
"
`;

exports[`migration baseline: SKILL.md (skillStyle) > without techStack and without sourceUrl 1`] = `
"---
name: simple-skill
description: A simple project.
---

# Simple Codebase Reference

3 files | 50 lines | 500 tokens

## Overview

Use this skill when you need to:
- Understand project structure and file organization
- Find where specific functionality is implemented
- Read source code for any file
- Search for code patterns or keywords

## Files

| File | Contents |
|------|----------|
| \`references/summary.md\` | **Start here** - Purpose, format explanation, and statistics |
| \`references/project-structure.md\` | Directory tree with line counts per file |
| \`references/files.md\` | All file contents (search with \`## File: <path>\`) |

## How to Use

### 1. Find file locations

Check \`project-structure.md\` for the directory tree:

\`\`\`
src/
  index.ts (42 lines)
  utils/
    helpers.ts (128 lines)
\`\`\`

### 2. Read file contents

Grep in \`files.md\` for the file path:

\`\`\`
## File: src/utils/helpers.ts
\`\`\`

### 3. Search for code

Grep in \`files.md\` for keywords:

\`\`\`
function calculateTotal
\`\`\`

## Common Use Cases

**Understand a feature:**
1. Search \`project-structure.md\` for related file names
2. Read the main implementation file in \`files.md\`
3. Search for imports/references to trace dependencies

**Debug an error:**
1. Grep the error message or class name in \`files.md\`
2. Check line counts in \`project-structure.md\` to find large files

**Find all usages:**
1. Grep function or variable name in \`files.md\`

## Tips

- Use line counts in \`project-structure.md\` to estimate file complexity
- Search \`## File:\` pattern to jump between files
- Check \`summary.md\` for excluded files, format details, and file statistics

---

This skill was generated by [Repomix](https://github.com/yamadashy/repomix)
"
`;

exports[`migration baseline: skillSectionGenerators > generateFilesSection > content with backtick collision (delimiter widens to 4 backticks) 1`] = `
"# Files

## File: docs/example.md
\`\`\`\`markdown
Inline \`\`\` triple backticks.

\`\`\`\`"
`;

exports[`migration baseline: skillSectionGenerators > generateFilesSection > enabled with mixed extensions 1`] = `
"# Files

## File: src/index.ts
\`\`\`typescript
export const x = 1;

\`\`\`

## File: src/main.py
\`\`\`python
print("hi")

\`\`\`

## File: Dockerfile
\`\`\`dockerfile
FROM node:20

\`\`\`

## File: README.unknown
\`\`\`
unknown ext

\`\`\`"
`;

exports[`migration baseline: skillSectionGenerators > generateStructureSection > enabled 1`] = `
"# Directory Structure

\`\`\`
src/
  utils/
    helpers.py (2 lines)
  index.ts (1 lines)
\`\`\`"
`;

exports[`migration baseline: skillSectionGenerators > generateSummarySection > with statistics section 1`] = `
"This file is a merged representation of the entire codebase, combined into a single document by Repomix.

# Summary

## Purpose

This is a reference codebase organized into multiple files for AI consumption.
It is designed to be easily searchable using grep and other text-based tools.

## File Structure

This skill contains the following reference files:

| File | Contents |
|------|----------|
| \`project-structure.md\` | Directory tree with line counts per file |
| \`files.md\` | All file contents (search with \`## File: <path>\`) |
| \`tech-stacks.md\` | Languages, frameworks, and dependencies per package (search with \`## Tech Stack: <path>\`) |
| \`summary.md\` | This file - purpose and format explanation |

## Usage Guidelines

- Treat as read-only.
- Use file paths to distinguish files.

## Notes

- Some files may have been excluded.
- Binary files are not included.

## Statistics

10 files | 500 lines | 5000 tokens"
`;

exports[`migration baseline: skillSectionGenerators > generateSummarySection > without statistics section 1`] = `
"This file is a merged representation of the entire codebase, combined into a single document by Repomix.

# Summary

## Purpose

This is a reference codebase organized into multiple files for AI consumption.
It is designed to be easily searchable using grep and other text-based tools.

## File Structure

This skill contains the following reference files:

| File | Contents |
|------|----------|
| \`project-structure.md\` | Directory tree with line counts per file |
| \`files.md\` | All file contents (search with \`## File: <path>\`) |
| \`tech-stacks.md\` | Languages, frameworks, and dependencies per package (search with \`## Tech Stack: <path>\`) |
| \`summary.md\` | This file - purpose and format explanation |

## Usage Guidelines

- Treat as read-only.
- Use file paths to distinguish files.

## Notes

- Some files may have been excluded.
- Binary files are not included."
`;
